force-app/main/default/objects/Account/fields/AcceptPromotion__c.field-meta.xml
<CustomField>
    <fullName>AcceptPromotion__c</fullName>
    <description>O Cliente aceita receber comunicação da Vivo?</description>
    <label>Aceita receber comunicação Vivo?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <label>Sim</label>
            </value>
            <value>
                <fullName>No</fullName>
                <label>Não</label>
            </value>
            <value>
                <fullName>NoAnswer</fullName>
                <default>true</default>
                <label>Sem Resposta</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>