force-app/main/default/objects/Account/fields/AccountDataSanitized__c.field-meta.xml
<CustomField>
    <fullName>AccountDataSanitized__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicação se os dados básicos do cliente estão sanitizados</description>
    <label>Dados básicos sanitizados?</label>
    <type>Checkbox</type>
</CustomField>