force-app/main/default/objects/Account/fields/AccountDataValidated__c.field-meta.xml
<CustomField>
    <fullName>AccountDataValidated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicação se os dados básicos do cliente estão validados</description>
    <label>Dados básicos validados?</label>
    <type>Checkbox</type>
</CustomField>