force-app/main/default/objects/Account/fields/AgingCliente__c.field-meta.xml
<CustomField>
    <fullName>AgingCliente__c</fullName>
    <description>Aging do cliente em meses.</description>
    <label>Aging Cliente</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>