force-app/main/default/objects/Account/fields/AgingClientMobile__c.field-meta.xml
<CustomField>
    <fullName>AgingClientMobile__c</fullName>
    <label>Aging Cliente Móvel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>