force-app/main/default/objects/Account/fields/AgingFixClient__c.field-meta.xml
<CustomField>
    <fullName>AgingFixClient__c</fullName>
    <formula>AgingCliente__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tempo como Cliente Fixa (Mês)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>