force-app/main/default/objects/Account/fields/AgingMobile__c.field-meta.xml
<CustomField>
    <fullName>AgingMobile__c</fullName>
    <description>Campo criado para diferenciar o tempo que o cliente usa serviços da Móvel.
Futuramente esse campo será excluído.</description>
    <formula>IF(
AgingClientMobile__c = 0, '0 Mês',

IF(
AgingClientMobile__c = 12, '1 Ano',

IF(
AND(
AgingClientMobile__c/12 > 1,
MOD(AgingClientMobile__c,12) = 0), TEXT(FLOOR(AgingClientMobile__c/12)) &amp; ' Anos',

IF(
AgingClientMobile__c = 1, '1 Mês',

IF(
AND(
AgingClientMobile__c > 1,
AgingClientMobile__c &lt;= 11), TEXT(AgingClientMobile__c) &amp; ' Meses',

IF(
AND(
AgingClientMobile__c >= 13,
AgingClientMobile__c &lt;= 23,
MOD(AgingClientMobile__c,12) = 1),
TEXT(FLOOR(AgingClientMobile__c/12)) &amp; ' Ano e 1 Mês',

IF(
AND(
AgingClientMobile__c >= 13,
AgingClientMobile__c &lt;= 23,
MOD(AgingClientMobile__c,12) > 1),
TEXT(FLOOR(AgingClientMobile__c/12)) &amp; ' Ano e ' &amp; TEXT(AgingClientMobile__c-12) &amp; ' Meses',

IF(
AND(
AgingClientMobile__c >= 24,
MOD(AgingClientMobile__c,12) = 1), TEXT(FLOOR(AgingClientMobile__c/12)) &amp; ' Anos e 1 Mês',

IF(
AND(
AgingClientMobile__c >= 24,
MOD(AgingClientMobile__c,12) > 1), TEXT(FLOOR(AgingClientMobile__c/12)) &amp; ' Anos e ' &amp; TEXT(MOD(AgingClientMobile__c,12)) &amp; ' Meses', ''

)))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Data do Cliente da Última Ativação</inlineHelpText>
    <label>Tempo como Cliente Móvel</label>
    <type>Text</type>
</CustomField>