force-app/main/default/objects/Account/fields/AgingMobileClient__c.field-meta.xml
<CustomField>
    <fullName>AgingMobileClient__c</fullName>
    <formula>IF(
NOT(
ISNULL(FirstMobileActivationDate__c)), ((Today() - FirstMobileActivationDate__c)/30) , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tempo como Cliente Móvel (Mês)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>