force-app/main/default/objects/Account/fields/AlertMessage__c.field-meta.xml
<CustomField>
    <fullName>AlertMessage__c</fullName>
    <formula>IF ( ISPICKVAL(BillingAccountType__c, 'Fixa'), IF ( DirectDebit__c = False,IMAGE("/resource/InvoicePaidStatus/AlertIcon.png","Yellow",20,20) &amp;"  "&amp; $Setup.Alarm__c.OfertarDebAutFixa__c,IMAGE("/resource/InvoicePaidStatus/Pago.png","Green",20,20) &amp;"  "&amp; $Setup.Alarm__c.DebAutCadastradoFixa__c)&amp;BR()&amp;

                IF ( IsDigitalAccount__c = False,IMAGE("/resource/InvoicePaidStatus/AlertIcon.png","Yellow",20,20) &amp;"  "&amp; $Setup.Alarm__c.OfertarFaturaDigitalFixa__c,IMAGE("/resource/InvoicePaidStatus/Pago.png","Green",20,20)&amp;"  "&amp; $Setup.Alarm__c.FatDigitalCadastradaFixa__c),
                
                IF ( DirectDebit__c = False,IMAGE("/resource/InvoicePaidStatus/AlertIcon.png","Yellow",20,20) &amp;"  "&amp; $Setup.Alarm__c.OfertarDebAutMovel__c,IMAGE("/resource/InvoicePaidStatus/Pago.png","Green",20,20) &amp;"  "&amp; $Setup.Alarm__c.DebAutCadastradoMovel__c)&amp;BR()&amp;
                
                IF ( IsDigitalAccount__c = False,IMAGE("/resource/InvoicePaidStatus/AlertIcon.png","Yellow",20,20) &amp;"  "&amp; $Setup.Alarm__c.OfertarFaturaDigitalMovel__c,IMAGE("/resource/InvoicePaidStatus/Pago.png","Green",20,20) &amp;"  "&amp; $Setup.Alarm__c.FatDigitalCadastradaMovel__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Observação</label>
    <type>Text</type>
</CustomField>