force-app/main/default/objects/Account/fields/ApproverRequestAction__c.field-meta.xml
<CustomField>
    <fullName>ApproverRequestAction__c</fullName>
    <defaultValue>&apos;Habilitação Pré&apos;</defaultValue>
    <description>Field used only to store and show value on approvalProcess.</description>
    <label>Ação</label>
    <length>20</length>
    <type>Text</type>
</CustomField>