force-app/main/default/objects/Account/fields/ApproverRequestCustomerCPF__c.field-meta.xml
<CustomField>
    <fullName>ApproverRequestCustomerCPF__c</fullName>
    <description>Field used only to store and show value on approvalProcess.</description>
    <label>CPF do Cliente</label>
    <length>20</length>
    <type>Text</type>
</CustomField>