force-app/main/default/objects/Account/fields/ApproverRequestCustomerName__c.field-meta.xml
<CustomField>
    <fullName>ApproverRequestCustomerName__c</fullName>
    <description>Field used only to store and show value on approvalProcess.</description>
    <label>Nome e sobrenome do cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>