force-app/main/default/objects/Account/fields/ApproverRequestDateTime__c.field-meta.xml
<CustomField>
    <fullName>ApproverRequestDateTime__c</fullName>
    <description>Field used only to store and show value on approvalProcess.</description>
    <label>Data/Hora da solicitação</label>
    <type>DateTime</type>
</CustomField>