force-app/main/default/objects/Account/fields/ApproverRequestUserChannel__c.field-meta.xml
<CustomField>
    <fullName>ApproverRequestUserChannel__c</fullName>
    <description>Field used only to store and show value on approvalProcess.</description>
    <label>Canal de atendimento</label>
    <length>20</length>
    <type>Text</type>
</CustomField>