force-app/main/default/objects/Account/fields/ApproverRequestUserLogin__c.field-meta.xml
<CustomField>
    <fullName>ApproverRequestUserLogin__c</fullName>
    <description>Field used only to store and show value on approvalProcess.</description>
    <label>Login do usuário solicitante</label>
    <length>255</length>
    <type>Text</type>
</CustomField>