force-app/main/default/objects/Account/fields/ApproverRequestUsername__c.field-meta.xml
<CustomField>
    <fullName>ApproverRequestUsername__c</fullName>
    <formula>LastModifiedBy.FirstName &amp; &quot; &quot; &amp; LastModifiedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Usuário solicitante</label>
    <type>Text</type>
</CustomField>