force-app/main/default/objects/Account/fields/ApproverUser__c.field-meta.xml
<CustomField>
    <fullName>ApproverUser__c</fullName>
    <label>Approver User</label>
    <length>40</length>
    <type>Text</type>
</CustomField>