force-app/main/default/objects/Account/fields/ApproverUserId__c.field-meta.xml
<CustomField>
    <fullName>ApproverUserId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Id Usuário Aprovador</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contas</relationshipName>
    <type>Lookup</type>
</CustomField>