force-app/main/default/objects/Account/fields/ApproverUserName__c.field-meta.xml
<CustomField>
    <fullName>ApproverUserName__c</fullName>
    <description>US-380 - Campo resposável por armazenar o nome do aprovador - 06/03/2023</description>
    <label>Nome Usuário Aprovador</label>
    <length>255</length>
    <type>Text</type>
</CustomField>