force-app/main/default/objects/Account/fields/BillingAccount__c.field-meta.xml
<CustomField>
    <fullName>BillingAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conta Faturamento</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contas Faturamento</relationshipLabel>
    <relationshipName>BillingAccount</relationshipName>
    <type>Lookup</type>
</CustomField>