force-app/main/default/objects/Account/fields/BillingAccountType__c.field-meta.xml
<CustomField>
    <fullName>BillingAccountType__c</fullName>
    <label>Tipo de Conta Faturamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixa</fullName>
            </value>
            <value>
                <fullName>Móvel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>