force-app/main/default/objects/Account/fields/BillingAddressType__c.field-meta.xml
<CustomField>
    <fullName>BillingAddressType__c</fullName>
    <description>Tipo de logradouro para endereço principal</description>
    <label>Tipo Logradouro</label>
    <length>50</length>
    <type>Text</type>
</CustomField>