force-app/main/default/objects/Account/fields/BillingComplement3__c.field-meta.xml
<CustomField>
    <fullName>BillingComplement3__c</fullName>
    <description>Complemento</description>
    <label>Complemento 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>