force-app/main/default/objects/Account/fields/BillingIBGECode__c.field-meta.xml
<CustomField>
    <fullName>BillingIBGECode__c</fullName>
    <description>Código IBGE do endereço principal</description>
    <label>Código IBGE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>