force-app/main/default/objects/Account/fields/BillingNumber__c.field-meta.xml
<CustomField>
    <fullName>BillingNumber__c</fullName>
    <description>Número do endereço principal</description>
    <label>Número</label>
    <length>255</length>
    <type>Text</type>
</CustomField>