force-app/main/default/objects/Account/fields/BillingSREAddressId__c.field-meta.xml
<CustomField>
    <fullName>BillingSREAddressId__c</fullName>
    <label>Id do Endereço</label>
    <length>255</length>
    <type>Text</type>
</CustomField>