force-app/main/default/objects/Account/fields/Bottom__c.field-meta.xml
<CustomField>
    <fullName>Bottom__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Siga o atendimento conforme solicitação do cliente, antes de finalizar a chamada use a seguinte fraseologia, ou algo próximo desse direcionamento - &quot;Identificamos que em outro atendimento, durante a pesquisa eletrônica, a sua avaliação não foi satisfatória, posso lhe ajudar com o tema que envolvia essa ligação?&quot;, Peça desculpas pelo que aconteceu, apresente solução para a causa raiz, e se necessário e sendo do seu escopo, abra o HDE</inlineHelpText>
    <label>Bottom</label>
    <type>Checkbox</type>
</CustomField>