force-app/main/default/objects/Account/fields/BroadbandAmount__c.field-meta.xml
<CustomField>
    <fullName>BroadbandAmount__c</fullName>
    <label>Total Banda Larga</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>