force-app/main/default/objects/Account/fields/BroadbandOthers__c.field-meta.xml
<CustomField>
    <fullName>BroadbandOthers__c</fullName>
    <description>Valor de Outros do ativo/produto de Banda Larga utilizado no componente customizado de ofertas</description>
    <label>Outros</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>