force-app/main/default/objects/Account/fields/BroadbandRecurrence__c.field-meta.xml
<CustomField>
    <fullName>BroadbandRecurrence__c</fullName>
    <description>Valor de Assinatura do ativo/produto de Banda Larga utilizado no componente customizado de ofertas</description>
    <label>Assinatura</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>