force-app/main/default/objects/Account/fields/BroadbandSVA__c.field-meta.xml
<CustomField>
    <fullName>BroadbandSVA__c</fullName>
    <label>SVA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>