force-app/main/default/objects/Account/fields/ComplementServiceAvailability__c.field-meta.xml
<CustomField>
    <fullName>ComplementServiceAvailability__c</fullName>
    <description>Campo complemento utilizado no componente de consulta de disponibilidade.</description>
    <label>ComplementServiceAvailability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACESSO</fullName>
                <label>Acesso</label>
            </value>
            <value>
                <fullName>AGENCIA</fullName>
                <label>Agencia</label>
            </value>
            <value>
                <fullName>ALTOS</fullName>
                <label>Altos</label>
            </value>
            <value>
                <fullName>ALTURA</fullName>
                <label>Altura</label>
            </value>
            <value>
                <fullName>ANDAR</fullName>
                <label>Andar</label>
            </value>
            <value>
                <fullName>APARTAMENTO</fullName>
                <label>Apartamento</label>
            </value>
            <value>
                <fullName>ARCO</fullName>
                <label>Arco</label>
            </value>
            <value>
                <fullName>ARMAZEM</fullName>
                <label>Armazem</label>
            </value>
            <value>
                <fullName>ATO</fullName>
                <label>Ato</label>
            </value>
            <value>
                <fullName>BAIXOS</fullName>
                <label>Baixos</label>
            </value>
            <value>
                <fullName>BANCA</fullName>
                <label>Banca</label>
            </value>
            <value>
                <fullName>BECO</fullName>
                <label>Beco</label>
            </value>
            <value>
                <fullName>BLOCO</fullName>
                <label>Bloco</label>
            </value>
            <value>
                <fullName>BOX</fullName>
                <label>Box</label>
            </value>
            <value>
                <fullName>CABINE</fullName>
                <label>Cabine</label>
            </value>
            <value>
                <fullName>CAIS</fullName>
                <label>Cais</label>
            </value>
            <value>
                <fullName>CAIXA POSTAL</fullName>
                <label>Caixa Postal</label>
            </value>
            <value>
                <fullName>CALCADA</fullName>
                <label>Calcada</label>
            </value>
            <value>
                <fullName>CALCADAO</fullName>
                <label>Calcadao</label>
            </value>
            <value>
                <fullName>CAMINHO</fullName>
                <label>Caminho</label>
            </value>
            <value>
                <fullName>CASA</fullName>
                <label>Casa</label>
            </value>
            <value>
                <fullName>CENTRO</fullName>
                <label>Centro</label>
            </value>
            <value>
                <fullName>CHACARA</fullName>
                <label>Chacara</label>
            </value>
            <value>
                <fullName>CHALE</fullName>
                <label>Chale</label>
            </value>
            <value>
                <fullName>COBERTURA</fullName>
                <label>Cobertura</label>
            </value>
            <value>
                <fullName>COMPARTIMENTO</fullName>
                <label>Compartimento</label>
            </value>
            <value>
                <fullName>COMPLEMENTO</fullName>
                <label>Complemento</label>
            </value>
            <value>
                <fullName>COMPLEXO</fullName>
                <label>Complexo</label>
            </value>
            <value>
                <fullName>COMUNIDADE</fullName>
                <label>Comunidade</label>
            </value>
            <value>
                <fullName>CONDOMINIO</fullName>
                <label>Condominio</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>