force-app/main/default/objects/Account/fields/CPFStatus__c.field-meta.xml
<CustomField>
    <fullName>CPFStatus__c</fullName>
    <description>Status do CPF proveniente da receita federal</description>
    <label>Status do CPF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>