force-app/main/default/objects/Account/fields/CreditScore__c.field-meta.xml
<CustomField>
    <fullName>CreditScore__c</fullName>
    <description>Score de Crédito recuperado via API consulta de crédito</description>
    <label>Score de Crédito</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>