force-app/main/default/objects/Account/fields/CreditScoreDate__c.field-meta.xml
<CustomField>
    <fullName>CreditScoreDate__c</fullName>
    <label>Data da Consulta de Crédito</label>
    <type>DateTime</type>
</CustomField>