force-app/main/default/objects/Account/fields/CreditScoreResultDescription__c.field-meta.xml
<CustomField>
    <fullName>CreditScoreResultDescription__c</fullName>
    <label>Descrição Score de Crédito</label>
    <length>255</length>
    <type>Text</type>
</CustomField>