force-app/main/default/objects/Account/fields/CustomerDecision__c.field-meta.xml
<CustomField>
    <fullName>CustomerDecision__c</fullName>
    <description>Confirma que é uma decisão do Cliente?</description>
    <label>Confirma que é uma decisão do Cliente?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <label>Sim</label>
            </value>
            <value>
                <fullName>No</fullName>
                <label>Não</label>
            </value>
            <value>
                <fullName>NoAnswer</fullName>
                <label>Sem Resposta</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>