force-app/main/default/objects/Account/fields/CustomerNoContact__c.field-meta.xml
<CustomField>
    <fullName>CustomerNoContact__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Esse cliente não entrou em contato no Call Center nos ultimos 90 dias. Entenda a solicitação do cliente e atue para atendê-la.</inlineHelpText>
    <label>Cliente sem contato</label>
    <type>Checkbox</type>
</CustomField>