force-app/main/default/objects/Account/fields/CustomerProfileCompactLayout__c.field-meta.xml
<CustomField>
    <fullName>CustomerProfileCompactLayout__c</fullName>
    <formula>IF( 		
				OR( OpenTicketBD__c = true,
								TDNA__c = true,
        Recaller__c = true,
        Bottom__c = true,
        HighTemperature__c = true,
        Reincident__c = true,
        TDNARetention__c = true,
        TicketBDReincident__c = true,
        ODC__c = true,
        NCC__c = true,
        HDENoContact__c = true,
								TEXT(CustomerMoodRating__c) = &quot;Sim&quot;),				
				IMAGE(&quot;/resource/HDERedBar&quot;, &quot;Red&quot;),
    IF(	HDELastUpdateDate__c +2 &gt;= today(), 
        IMAGE(&quot;/resource/HDEGreenBar?&quot;, &quot;green&quot;),
        IMAGE(&quot;/resource/HDEGrayBar&quot;, &quot;Gray&quot;)))</formula>
    <label>Perfil do Cliente</label>
    <type>Text</type>
</CustomField>