force-app/main/default/objects/Account/fields/CustomerProfileListView__c.field-meta.xml
<CustomField>
    <fullName>CustomerProfileListView__c</fullName>
    <formula>IF( 		
				OR( OpenTicketBD__c = true,
								TDNA__c = true,
        Recaller__c = true,
        Bottom__c = true,
        HighTemperature__c = true,
        Reincident__c = true,
        TDNARetention__c = true,
        TicketBDReincident__c = true,
        ODC__c = true,
        NCC__c = true,
        HDENoContact__c = true,
								TEXT(CustomerMoodRating__c) = &quot;Sim&quot;),				
				IMAGE(&quot;/resource/HDERed&quot;, &quot;Red&quot;, 24, 170),
    IF(	HDELastUpdateDate__c +2 &gt;= today(), 
        IMAGE(&quot;/resource/HDEGreen?&quot;, &quot;green&quot;, 24, 170),
        IMAGE(&quot;/resource/HDEGray&quot;, &quot;Gray&quot;, 24, 170)))</formula>
    <label>Perfil do cliente lista</label>
    <type>Text</type>
</CustomField>