force-app/main/default/objects/Account/fields/CustomerProfileText__c.field-meta.xml
<CustomField>
    <fullName>CustomerProfileText__c</fullName>
    <formula>IF( 		
				OR( OpenTicketBD__c = true,
								TDNA__c = true,
        Recaller__c = true,
        Bottom__c = true,
        HighTemperature__c = true,
        Reincident__c = true,
        TDNARetention__c = true,
        TicketBDReincident__c = true,
        ODC__c = true,
        NCC__c = true,
        HDENoContact__c = true,
								TEXT(CustomerMoodRating__c) = &quot;Sim&quot;),				
				&quot;Cliente com Indicador Negativo&quot;,
    IF(	HDELastUpdateDate__c +2 &gt;= today(), 
        &quot;Cliente com Indicador Positivo&quot;,
        &quot;Cliente Sem Indicador Para Avaliação&quot;))</formula>
    <label>Perfil do cliente texto</label>
    <type>Text</type>
</CustomField>