force-app/main/default/objects/Account/fields/CustomerSegment__c.field-meta.xml
<CustomField>
    <fullName>CustomerSegment__c</fullName>
    <description>Segmentação do cliente (Alto, Médio Valor, etc.).</description>
    <label>Segmento do Cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VIP</fullName>
            </value>
            <value>
                <fullName>TOP</fullName>
            </value>
            <value>
                <fullName>ALTO VALOR</fullName>
            </value>
            <value>
                <fullName>MEDIO VALOR</fullName>
            </value>
            <value>
                <fullName>Silver I</fullName>
            </value>
            <value>
                <fullName>Silver II</fullName>
            </value>
            <value>
                <fullName>Massivo I</fullName>
            </value>
            <value>
                <fullName>Massivo II</fullName>
            </value>
            <value>
                <fullName>GOLD</fullName>
            </value>
            <value>
                <fullName>PLATINUM</fullName>
            </value>
            <value>
                <fullName>PURPURA</fullName>
            </value>
            <value>
                <fullName>SILVER</fullName>
            </value>
            <value>
                <fullName>V</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>