force-app/main/default/objects/Account/fields/Detractor__c.field-meta.xml
<CustomField>
    <fullName>Detractor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Detrator</label>
    <type>Checkbox</type>
</CustomField>