force-app/main/default/objects/Account/fields/DigitalAgreementDate__c.field-meta.xml
<CustomField>
    <fullName>DigitalAgreementDate__c</fullName>
    <label>Data de aceite das promoções</label>
    <type>Date</type>
</CustomField>