force-app/main/default/objects/Account/fields/DigitalAgreementIP__c.field-meta.xml
<CustomField>
    <fullName>DigitalAgreementIP__c</fullName>
    <label>IP de aceite das promoções</label>
    <length>100</length>
    <type>Text</type>
</CustomField>