force-app/main/default/objects/Account/fields/DigitalProfile__c.field-meta.xml
<CustomField>
    <fullName>DigitalProfile__c</fullName>
    <description>Campo a ser utilizado para ser exibido no front-end da aplicação.</description>
    <formula>IF(DigitalProfileBase__c = "0",
"Não Possui Informação",
IF(DigitalProfileBase__c = "1",
"Nada Digital",
IF(DigitalProfileBase__c = "2",
"Digital",
IF(DigitalProfileBase__c = "3",
"Super Digital",
""))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Perfil Digital</label>
    <type>Text</type>
</CustomField>