force-app/main/default/objects/Account/fields/DigitalProfileBase__c.field-meta.xml
<CustomField>
    <fullName>DigitalProfileBase__c</fullName>
    <description>0 = Não Possui Informação
1 = Nada Digital
2 = Digital
3 = Super Digital</description>
    <label>Digital Profile Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>