force-app/main/default/objects/Account/fields/DigitalProfileDW__c.field-meta.xml
<CustomField>
    <fullName>DigitalProfileDW__c</fullName>
    <label>Perfil Digital DW</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>