force-app/main/default/objects/Account/fields/DirectDebit__c.field-meta.xml
<CustomField>
    <fullName>DirectDebit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Possui débito automático, sim ou não?</description>
    <label>Débito Automático</label>
    <type>Checkbox</type>
</CustomField>