force-app/main/default/objects/Account/fields/DocumentNumber__c.field-meta.xml
<CustomField>
    <fullName>DocumentNumber__c</fullName>
    <externalId>true</externalId>
    <label>Número do Documento</label>
    <length>20</length>
    <type>Text</type>
</CustomField>