force-app/main/default/objects/Account/fields/DocumentType__c.field-meta.xml
<CustomField>
    <fullName>DocumentType__c</fullName>
    <label>Tipo do Documento</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CPF</fullName>
            </value>
            <value>
                <fullName>Passaporte</fullName>
            </value>
            <value>
                <fullName>Documento Estrangeiro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>